# agent-limits

./: .goreleaser.yaml  CLAUDE.md  Cargo.toml  README.md  TESTING.md  go.mod  install.sh
.github/workflows/: ci.yml  publish.yml  release.yml  rewrite-module-path-once.yml
cmd/aistat/: accounts.go  accounts_test.go  coverage_fake_test.go  coverage_test.go  fake_disabled.go  fake_enabled.go  fake_provider.go  main.go  main_fake_test.go  main_test.go  realproviders_test.go  registry.go  switch.go  switch_multi_test.go  switch_test.go  usage.go
cmd/usage-check/: coverage_fake_test.go  coverage_test.go  fake_enabled.go  fake_provider.go  main.go  main_test.go  realproviders_test.go  registry.go
internal/accounts/: account.go  store.go  store_darwin.go  store_darwin_test.go  store_linux.go
internal/cred/: claude_test.go  codex.go  codex_test.go  github.go  github_test.go  keychain_darwin.go  keychain_darwin_test.go  keychain_linux.go  keychain_linux_test.go  keychain_other.go
internal/httpx/: httpx.go  httpx_test.go
internal/orchestrate/: orchestrate.go  orchestrate_test.go  parity_test.go
internal/providers/: classify.go  types.go  types_test.go
internal/providers/claude/: account.go  account_test.go  claude.go  claude_live_test.go  claude_test.go  profile.go  profile_test.go  reconcile.go  reconcile_test.go  refresh.go  refresh_test.go  usagecache.go  useragent.go  useragent_test.go
internal/providers/codex/: account.go  account_test.go  codex.go  (+8 more)
internal/render/: json.go  json_test.go  text.go  text_test.go
internal/testutil/: testutil.go
issues/polished/: 20260627-cloudflare-usage-store.md
src/: httpx.rs  main.rs  orchestrate.rs
src/accounts/: memory.rs  mod.rs
src/cli/: opencode_setup.rs  registry.rs  usage.rs
src/cred/: chrome_cookie_darwin.rs  claude.rs  codex.rs  keychain_darwin.rs  keychain_linux.rs  mod.rs
src/providers/: mod.rs  multiaccount.rs  usagecache.rs
src/render/: json.rs  text.rs
(+25 files in other folders)
